# group-project-random-strangers

./: .gitignore  .gitmodules  README.md
frontend/: package-lock.json
hardware/Gimbal/Mechanical Design/: GWK6010-8 3D Model.step  GWK6010-8.SLDPRT  Gimbal Assembly.SLDASM  Gimbal Base.SLDPRT  Gimbal Driver Mount.SLDPRT
hardware/Gimbal/Mechanical Design/20223618_assembly/: 20223618.txt  20223618_01.SLDPRT  ESSENTRA COMPONENTS 0146ef7a-e676-3b93-9c54-42d9e2b4027d.SLDASM  ds_metadata.csv
hardware/Gimbal/Solidworks Assembly/20223618_assembly/: 20223618_02.SLDPRT
hardware/simpleFOC Dual Motor Controller/: specifications.md
hardware/simpleFOC Dual Motor Controller/KiCad/: DriverStage.kicad_sch  PoleDriver.kicad_sch  add_jlc_parts.txt  fp-lib-table  simpleFOC Dual Motor Controller.kicad_pcb  simpleFOC Dual Motor Controller.kicad_pro  simpleFOC Dual Motor Controller.kicad_sch  sym-lib-table
hardware/simpleFOC Dual Motor Controller/KiCad/jlcpcb/gerber/: simpleFOC Dual Motor Controller-CuBottom.gbr  simpleFOC Dual Motor Controller-CuIn1.gbr  simpleFOC Dual Motor Controller-CuIn2.gbr  simpleFOC Dual Motor Controller-CuTop.gbr  simpleFOC Dual Motor Controller-EdgeCuts.gbr  simpleFOC Dual Motor Controller-MaskBottom.gbr  simpleFOC Dual Motor Controller-MaskTop.gbr  simpleFOC Dual Motor Controller-NPTH.drl  simpleFOC Dual Motor Controller-PTH.drl  simpleFOC Dual Motor Controller-PasteBottom.gbr  simpleFOC Dual Motor Controller-PasteTop.gbr  simpleFOC Dual Motor Controller-SilkBottom.gbr  simpleFOC Dual Motor Controller-SilkTop.gbr
hardware/simpleFOC Dual Motor Controller/KiCad/libraries/: easyeda2kicad.kicad_sym
software/Firmware Targets/common/FaultManager/: FaultManager.h
software/Firmware_Targets/common/FaultManager/: FaultManager.cpp
software/Firmware_Targets/common/simpleFOCtester/: simpleFOCtester.ino
software/Firmware_Targets/mks_esp32_dualfoc_v2/: board_config.h
software/Firmware_Targets/mks_esp32_dualfoc_v2/commander_interface/: CMakeLists.txt
software/Tools/train_ball_detector/: run_pipeline.py
src/: controlTryout.cs  justATest
src/ML/: comparisonModel.py  modelCitizen.py  prepData.py
src/Robot1/: mono_crash.0.0.json
src/Robot1/Assets/optitrack-unity/: Jenkinsfile  README.md
src/Robot1/UserSettings/Layouts/: default-6000.dwlt
src/UI/: kinect_qt_ui.py
src/capture/: device.cpp
src/python_kinect_interface/: kinect_interface.py
src/python_kinect_interface/cpp_wrapper/: CMakeLists.txt  kinect.hpp  kinect_wrapper.cpp  kinect_wrapper.h  rot_pos_normalizer.hpp
src/reference_matching/: dtw.py
src/reference_matching/references/: list.csv
tools/data_cap/captures/: pushup_test.csv
tools/data_cap/data_capture_kinectv2/: CMakeLists.txt  readme.md
tools/data_cap/data_capture_kinectv2/src/: kinect_reader.cpp  writer.cpp
tools/data_cap/data_capture_motive/: CMakeLists.txt  readme.md
tools/data_cap/data_capture_motive/src/: data_capture.cpp
tools/data_capture/: readme.md
tools/data_capture/src/: data_capture.cpp
tools/person_segment_test/: segment_person.py  train_fast_ball_detector.py  yolo_ball_person.py
tools/train_ball_detector/: benchmark_export.py  coco_utils.py  convert_labels.py  diag_torch.py  download_dataset.py  eval_images.txt  eval_list.txt  generate_eval_images.py  hardware_utils.py  run.txt  run_pipeline.py  train_ball_detector.py  train_model.py
(+75 files in other folders)
